Add example of matching non-copy types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ path = "src/copy_types.rs"
 [[bin]]
 name = "copy_type_references"
 path = "src/copy_type_references.rs"
+
+[[bin]]
+name = "non_copy_types"
+path = "src/non_copy_types.rs"
